fixed the issue of overflow of text from the users input area

--- a/style.css
+++ b/style.css
@@ -30,9 +30,13 @@ button:hover{
 }
 
 #display h2{
+     text-align: right;
      height: 30px;
      width: 9em;
-     /* overflow: scroll; */
+     white-space: nowrap;
+     overflow: hidden;
+     text-overflow: ellipsis;
+     direction: rtl;
 }
 
 #hero{
